terraform-files/ansible-master.tf
resource "aws_instance" "ansible-master" {
  ami = "ami-025d7bea93113b6cc"
  instance_type = "t3.micro"
  tags = {
    Name = "ansible-master"
  }
  associate_public_ip_address = true
  subnet_id = aws_subnet.public_subnet.id
  user_data = "~/Desktop/Dev-ops-project-06/terraform-files/user-data.sh"
  vpc_security_group_ids = [aws_security_group.allow_ssh-ansible-master.id]
  key_name = "ec2-key-2"
}
